gramatica_v4Parser.py
# Generated from gramatica_v4.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatica_v4Parser ( Parser ):

    grammarFileName = "gramatica_v4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'for'", 
                     "'switch'", "'case'", "'default'", "'struct'", "'return'", 
                     "'break'", "'continue'", "'print'", "'program'", "'import'", 
                     "'void'", "'int'", "'float'", "'bool'", "'string'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "<INVALID>", "'<='", "'>='", "'<'", "'>'", "'&&'", 
                     "'||'", "'!'", "'='", "'?'", "':'", "'.'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FOR", "SWITCH", 
                      "CASE", "DEFAULT", "STRUCT", "RETURN", "BREAK", "CONTINUE", 
                      "PRINT", "PROGRAM", "IMPORT", "VOID", "INT_T", "FLOAT_T", 
                      "BOOL_T", "STRING_T", "BOOL_LIT", "SUMA", "RESTA", 
                      "MULTIP", "DIV", "MOD", "EQ", "NOEQ", "MENIQ", "MAYIQ", 
                      "MENOR", "MAYOR", "AND", "OR", "NOT", "ASIGNA", "INTERROGA", 
                      "DOSPUNTOS", "PUNTO", "PARENA", "PARENC", "LLAVEA", 
                      "LLAVEC", "CORCHETA", "CORCHETC", "PCOMA", "COMMA", 
                      "FLOAT_LIT", "NUM", "STRING_LIT", "ID", "WS", "COMMENT", 
                      "BLOQUE_COMM" ]

    RULE_program = 0
    RULE_topLevelDecl = 1
    RULE_importDecl = 2
    RULE_structDecl = 3
    RULE_structField = 4
    RULE_funcDecl = 5
    RULE_returnType = 6
    RULE_paramList = 7
    RULE_param = 8
    RULE_t_type = 9
    RULE_arrayType = 10
    RULE_statement = 11
    RULE_varDecl = 12
    RULE_arrayDecl = 13
    RULE_structVarDecl = 14
    RULE_arrayLiteral = 15
    RULE_assignment = 16
    RULE_fieldAssign = 17
    RULE_arrayAssign = 18
    RULE_ifStatement = 19
    RULE_whileStatement = 20
    RULE_forStatement = 21
    RULE_switchStatement = 22
    RULE_caseClause = 23
    RULE_defaultClause = 24
    RULE_forInit = 25
    RULE_forUpdate = 26
    RULE_returnStatement = 27
    RULE_breakStatement = 28
    RULE_continueStatement = 29
    RULE_printStatement = 30
    RULE_exprStatement = 31
    RULE_block = 32
    RULE_expr = 33
    RULE_argList = 34

    ruleNames =  [ "program", "topLevelDecl", "importDecl", "structDecl", 
                   "structField", "funcDecl", "returnType", "paramList", 
                   "param", "t_type", "arrayType", "statement", "varDecl", 
                   "arrayDecl", "structVarDecl", "arrayLiteral", "assignment", 
                   "fieldAssign", "arrayAssign", "ifStatement", "whileStatement", 
                   "forStatement", "switchStatement", "caseClause", "defaultClause", 
                   "forInit", "forUpdate", "returnStatement", "breakStatement", 
                   "continueStatement", "printStatement", "exprStatement", 
                   "block", "expr", "argList" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FOR=4
    SWITCH=5
    CASE=6
    DEFAULT=7
    STRUCT=8
    RETURN=9
    BREAK=10
    CONTINUE=11
    PRINT=12
    PROGRAM=13
    IMPORT=14
    VOID=15
    INT_T=16
    FLOAT_T=17
    BOOL_T=18
    STRING_T=19
    BOOL_LIT=20
    SUMA=21
    RESTA=22
    MULTIP=23
    DIV=24
    MOD=25
    EQ=26
    NOEQ=27
    MENIQ=28
    MAYIQ=29
    MENOR=30
    MAYOR=31
    AND=32
    OR=33
    NOT=34
    ASIGNA=35
    INTERROGA=36
    DOSPUNTOS=37
    PUNTO=38
    PARENA=39
    PARENC=40
    LLAVEA=41
    LLAVEC=42
    CORCHETA=43
    CORCHETC=44
    PCOMA=45
    COMMA=46
    FLOAT_LIT=47
    NUM=48
    STRING_LIT=49
    ID=50
    WS=51
    COMMENT=52
    BLOQUE_COMM=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(gramatica_v4Parser.PROGRAM, 0)

        def LLAVEA(self):
            return self.getToken(gramatica_v4Parser.LLAVEA, 0)

        def LLAVEC(self):
            return self.getToken(gramatica_v4Parser.LLAVEC, 0)

        def EOF(self):
            return self.getToken(gramatica_v4Parser.EOF, 0)

        def ID(self):
            return self.getToken(gramatica_v4Parser.ID, 0)

        def topLevelDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.TopLevelDeclContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.TopLevelDeclContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = gramatica_v4Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(gramatica_v4Parser.PROGRAM)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==50:
                self.state = 71
                self.match(gramatica_v4Parser.ID)


            self.state = 74
            self.match(gramatica_v4Parser.LLAVEA)
            self.state = 76 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 75
                self.topLevelDecl()
                self.state = 78 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2111629267296058) != 0)):
                    break

            self.state = 80
            self.match(gramatica_v4Parser.LLAVEC)
            self.state = 81
            self.match(gramatica_v4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_topLevelDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TopStructDeclContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.StructDeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopStructDecl" ):
                return visitor.visitTopStructDecl(self)
            else:
                return visitor.visitChildren(self)


    class TopStatementContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(gramatica_v4Parser.StatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopStatement" ):
                return visitor.visitTopStatement(self)
            else:
                return visitor.visitChildren(self)


    class TopFuncDeclContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcDecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.FuncDeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopFuncDecl" ):
                return visitor.visitTopFuncDecl(self)
            else:
                return visitor.visitChildren(self)


    class TopImportContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def importDecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ImportDeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopImport" ):
                return visitor.visitTopImport(self)
            else:
                return visitor.visitChildren(self)



    def topLevelDecl(self):

        localctx = gramatica_v4Parser.TopLevelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelDecl)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = gramatica_v4Parser.TopFuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.funcDecl()
                pass

            elif la_ == 2:
                localctx = gramatica_v4Parser.TopImportContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.importDecl()
                pass

            elif la_ == 3:
                localctx = gramatica_v4Parser.TopStructDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.structDecl()
                pass

            elif la_ == 4:
                localctx = gramatica_v4Parser.TopStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(gramatica_v4Parser.IMPORT, 0)

        def ID(self):
            return self.getToken(gramatica_v4Parser.ID, 0)

        def PCOMA(self):
            return self.getToken(gramatica_v4Parser.PCOMA, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_importDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDecl" ):
                return visitor.visitImportDecl(self)
            else:
                return visitor.visitChildren(self)




    def importDecl(self):

        localctx = gramatica_v4Parser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(gramatica_v4Parser.IMPORT)
            self.state = 90
            self.match(gramatica_v4Parser.ID)
            self.state = 91
            self.match(gramatica_v4Parser.PCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(gramatica_v4Parser.STRUCT, 0)

        def ID(self):
            return self.getToken(gramatica_v4Parser.ID, 0)

        def LLAVEA(self):
            return self.getToken(gramatica_v4Parser.LLAVEA, 0)

        def LLAVEC(self):
            return self.getToken(gramatica_v4Parser.LLAVEC, 0)

        def PCOMA(self):
            return self.getToken(gramatica_v4Parser.PCOMA, 0)

        def structField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.StructFieldContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.StructFieldContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_structDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = gramatica_v4Parser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(gramatica_v4Parser.STRUCT)
            self.state = 94
            self.match(gramatica_v4Parser.ID)
            self.state = 95
            self.match(gramatica_v4Parser.LLAVEA)
            self.state = 97 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.structField()
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 983040) != 0)):
                    break

            self.state = 101
            self.match(gramatica_v4Parser.LLAVEC)
            self.state = 102
            self.match(gramatica_v4Parser.PCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_type(self):
            return self.getTypedRuleContext(gramatica_v4Parser.T_typeContext,0)


        def ID(self):
            return self.getToken(gramatica_v4Parser.ID, 0)

        def PCOMA(self):
            return self.getToken(gramatica_v4Parser.PCOMA, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_structField

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructField" ):
                return visitor.visitStructField(self)
            else:
                return visitor.visitChildren(self)




    def structField(self):

        localctx = gramatica_v4Parser.StructFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_structField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.t_type()
            self.state = 105
            self.match(gramatica_v4Parser.ID)
            self.state = 106
            self.match(gramatica_v4Parser.PCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ReturnTypeContext,0)


        def ID(self):
            return self.getToken(gramatica_v4Parser.ID, 0)

        def PARENA(self):
            return self.getToken(gramatica_v4Parser.PARENA, 0)

        def PARENC(self):
            return self.getToken(gramatica_v4Parser.PARENC, 0)

        def block(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ParamListContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = gramatica_v4Parser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.returnType()
            self.state = 109
            self.match(gramatica_v4Parser.ID)
            self.state = 110
            self.match(gramatica_v4Parser.PARENA)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 983040) != 0):
                self.state = 111
                self.paramList()


            self.state = 114
            self.match(gramatica_v4Parser.PARENC)
            self.state = 115
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_type(self):
            return self.getTypedRuleContext(gramatica_v4Parser.T_typeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ArrayTypeContext,0)


        def VOID(self):
            return self.getToken(gramatica_v4Parser.VOID, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_returnType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnType" ):
                return visitor.visitReturnType(self)
            else:
                return visitor.visitChildren(self)




    def returnType(self):

        localctx = gramatica_v4Parser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnType)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.t_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.arrayType()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(gramatica_v4Parser.VOID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.ParamContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.COMMA)
            else:
                return self.getToken(gramatica_v4Parser.COMMA, i)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = gramatica_v4Parser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.param()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 123
                self.match(gramatica_v4Parser.COMMA)
                self.state = 124
                self.param()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_type(self):
            return self.getTypedRuleContext(gramatica_v4Parser.T_typeContext,0)


        def ID(self):
            return self.getToken(gramatica_v4Parser.ID, 0)

        def arrayType(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = gramatica_v4Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.t_type()
                self.state = 131
                self.match(gramatica_v4Parser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.arrayType()
                self.state = 134
                self.match(gramatica_v4Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_T(self):
            return self.getToken(gramatica_v4Parser.INT_T, 0)

        def FLOAT_T(self):
            return self.getToken(gramatica_v4Parser.FLOAT_T, 0)

        def BOOL_T(self):
            return self.getToken(gramatica_v4Parser.BOOL_T, 0)

        def STRING_T(self):
            return self.getToken(gramatica_v4Parser.STRING_T, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_t_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_type" ):
                return visitor.visitT_type(self)
            else:
                return visitor.visitChildren(self)




    def t_type(self):

        localctx = gramatica_v4Parser.T_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_t_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 983040) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_arrayType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BoolArrayTypeContext(ArrayTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.ArrayTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL_T(self):
            return self.getToken(gramatica_v4Parser.BOOL_T, 0)
        def CORCHETA(self):
            return self.getToken(gramatica_v4Parser.CORCHETA, 0)
        def CORCHETC(self):
            return self.getToken(gramatica_v4Parser.CORCHETC, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolArrayType" ):
                return visitor.visitBoolArrayType(self)
            else:
                return visitor.visitChildren(self)


    class IntArrayTypeContext(ArrayTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.ArrayTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_T(self):
            return self.getToken(gramatica_v4Parser.INT_T, 0)
        def CORCHETA(self):
            return self.getToken(gramatica_v4Parser.CORCHETA, 0)
        def CORCHETC(self):
            return self.getToken(gramatica_v4Parser.CORCHETC, 0)
